# RePluginDemo

./: config.gradle
host/: build.gradle  settings.gradle
host/app/: build.gradle
host/app/src/main/: AndroidManifest.xml
host/app/src/main/aidl/com/test/android/plugin2/: IPlugin2Request.aidl
host/app/src/main/java/com/test/android/plugin2/: PluginString.java
host/app/src/main/res/layout/: activity_main.xml  activity_plugin_fragment.xml  activity_plugin_resource.xml
host/app/src/main/res/values/: strings.xml
host/gradle/wrapper/: gradle-wrapper.properties
host/plugin-utils/: build.gradle
host/plugin-utils/src/androidTest/java/com/android/test/utils/: ExampleInstrumentedTest.java
host/plugin-utils/src/main/: AndroidManifest.xml
host/plugin-utils/src/main/res/drawable/: ic_launcher_background.xml
host/plugin-utils/src/main/res/values/: strings.xml
keystore/: plugin.keystore.jks
plugins/plugin1/: build.gradle  gradle.properties
plugins/plugin1/app/: build.gradle
plugins/plugin1/app/src/main/: AndroidManifest.xml
plugins/plugin1/app/src/main/res/layout/: activity_file_provider.xml  activity_fragment1.xml  activity_inner1.xml  activity_main.xml  activity_simple.xml
plugins/plugin1/app/src/main/res/values/: styles.xml
plugins/plugin1/gradle/wrapper/: gradle-wrapper.properties
plugins/plugin2/: build.gradle
plugins/plugin2/app/: CMakeLists.txt  build.gradle
plugins/plugin2/app/src/androidTest/java/com/test/android/plugin2/: ExampleInstrumentedTest.java
plugins/plugin2/app/src/main/: AndroidManifest.xml
plugins/plugin2/app/src/main/java/com/test/android/plugin2/: MainActivity.java  Plugin2Application.java  Plugin2BroadcastReceiver.java  Plugin2JobService.java  Plugin2RequestImp.java  Plugin2Service1.java  PluginString.java
plugins/plugin2/app/src/main/jni/: plugin-string.c
plugins/plugin2/app/src/main/res/layout/: activity_main.xml  layout_test_plugin.xml
plugins/plugin2/app/src/test/java/com/test/android/plugin2/: ExampleUnitTest.java
plugins/plugin2/gradle/wrapper/: gradle-wrapper.properties
plugins/plugins-output/: plugin1.apk  plugin2.apk
(+45 files in other folders)
